# Predicting_Calorie_Expenditure

./: .gitignore  README.md  analysis.ipynb  hello.py  pyproject.toml  utils.py
models/: xgboost_2025-05-18_14-25-08_634307.pkl  xgboost_2025-05-18_15-11-49_507208.pkl
notebooks/: analysis.ipynb  model.ipynb
utils/: data_utils.py  model_utils.py
