[project]
name = "predicting-calorie-expenditure-kaggle-comp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "neattime>=0.0.4",
    "numpy>=2.2.5",
    "optuna>=4.3.0",
    "polars>=1.29.0",
    "pyarrow>=20.0.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "torch>=2.7.0",
    "xgboost>=3.0.1",
]
